# regulator.ai

./: ..env.console.swp  .dockerignore  .env.console  .env.example  .env.neon  .env.vercel  .gitignore  100_PERCENT_COMPLETION.md  ADD_ENV_VAR_INSTRUCTIONS.md  AIDEN_WORK_AUDIT_2026-04-01.md  APPROVALS_REDESIGN_IMPLEMENTATION.md  AUTONOMOUS_EXECUTION_SUMMARY.md  BACKEND_CURRENT_STATE.md  BUSINESS-PLAN.md  CANONICAL_EXECUTION_PATH.md  CHANGELOG.md  CODEBASE_UNDERSTANDING_2026-04-07.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT_2026-04-14.md  COMPLETION_STATUS.md  COMPLETION_STATUS_90_PERCENT.md  CONSOLE-REDESIGN-BRIEF.md  CONSOLE_FUNCTIONALITY_FIXES.md  CONSOLE_IMMEDIATE_ACTIONS.md  CONSOLE_PHASE_2_COMPLETE.md  CONSOLE_PREMIUM_UPGRADE_PLAN.md  CONSOLE_QUALITY_COMPLETE.md  CONSOLE_QUALITY_COMPLETE_FINAL.md  CONSOLE_QUALITY_PROGRESS.md  CONSOLE_QUALITY_SPRINT.md  CONSOLE_UX_STATUS.md  CONTRIBUTING.md  CRITICAL_FIXES_2026-03-31.md  CURRENT_STATUS.md  DEEP_CODE_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_STATUS.md  (+101 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.openclaw/: workspace-state.json
.superdesign/: console-design-system.md  design-system.md
docs/: ADAPTER_GUIDE.md  ADMIN_GUIDE.md  API_QUICKSTART.md  API_REFERENCE.md  ARCHITECTURE.md  CONSOLE-ROADMAP.md  DEMO-SCRIPT.md  DEPLOYMENT.md  DEVTO-CROSS-POSTS.md  DEVTO-READY-POST.md  (+27 more)
sdks/python/: README.md  pyproject.toml  setup.py
sdks/python/tests/: test_client.py
sdks/python/vienna_os/: __init__.py  async_client.py  client.py
(+5305 files in other folders)
