[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vienna-os"
version = "0.1.0"
description = "Vienna OS — AI Governance Platform SDK"
authors = [{ name = "Vienna OS", email = "sdk@regulator.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ai", "governance", "compliance", "audit", "warrants", "vienna-os"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://regulator.ai"
Documentation = "https://regulator.ai/docs"
Repository = "https://github.com/risk-ai/regulator.ai"
Issues = "https://github.com/risk-ai/regulator.ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vienna_os*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
